---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
    - Fixed underground belts pairing-up (for rotation/direction purposes) with orthogonal counterparts.
    - Fixed underground belt not pairing-up correctly with existing unapproved underground belts.
    - Fixed (hard) crash when undoing changes after the deconstruction planner has been used against area with tiles.
    - Fixed tiles getting deconstruction orders when using deconstruction planner.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-07-31
  Features:
    - Addition of /cp_cleanup console command that can be used to clean-up some inconsistencies in the savegame related to construction planner. Make sure to backup the savegame before using.
  Bugfixes:
    - Fixed unapproved underground belts reversing when connecting to existing (approved/unapproved) underground belts.
    - Fixed deconstruction planner handling to avoid marking wrong entities for deconstruction (cliffs, fish, filtered entities if deconstruction planne is used from inventory).
    - Fixed deconstruction planner handling to avoid creating uncancelable deconstruction orders for the unapproved ghost force.
    - Fixed issue where copying/blueprinting a mix of approved ghosts and unapproved ghosts would in some cases result in unapproved ghosts being dropped from the resulting blueprint.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2022-07-30
  Bugfixes:
    - Fixed crash when undoing ghost placement if player is not holding anything in hand.
    - Fixed deconstruction of landscape (trees, rocks, cliffs) when using cut-and-paste.
    - Fixed uncancelable deconstruction requests when using cut-and-paste tool or deconstruction planner.